// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeaServiceRecordsScreen snapshot test should render SeaServiceRecordsScreen when loader is false  1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
  style={
    Object {
      "flex": 1,
      "marginTop": 60,
    }
  }
  testID="scrollview"
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "backgroundColor": "rgb(0, 122, 255)",
            "flexDirection": "row",
            "justifyContent": "space-around",
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="first-option-button"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2A2E43",
                "fontFamily": "Roboto-Regular",
              },
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "opacity": 0.2,
                },
              ],
            ]
          }
        >
          Marlow
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "#2A2E43",
            "borderBottomWidth": 2,
            "opacity": 1,
          }
        }
        testID="second-option-button"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2A2E43",
                "fontFamily": "Roboto-Regular",
              },
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                },
                Object {},
                Object {
                  "fontWeight": "bold",
                },
              ],
            ]
          }
        >
          Non Marlow
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#78849E",
          "borderBottomWidth": 0.5,
          "marginTop": 60,
        }
      }
    />
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingTop": 22.5,
              }
            }
          >
            <View>
              <View>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "marginLeft": 60,
                      "marginRight": 112.5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "width": "40%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        30-05-2009
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "marginLeft": 45,
                          "marginRight": 45,
                          "marginTop": 22.5,
                          "width": "10%",
                        }
                      }
                    >
                      <<?xml version="1.0" encoding="utf-8"?>
<!-- Generator: Adobe Illustrator 24.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
<svg version="1.1" id="Layer_1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
	 viewBox="0 0 22.5 12" style="enable-background:new 0 0 22.5 12;" xml:space="preserve">
  <style type="text/css">
	.st0{}
</style>
  <polygon class="st0" points="16.5,0 15.1,1.4 18.7,5 0,5 0,7 18.7,7 15.1,10.6 16.5,12 22.5,6 "/>
</svg>

                        height={20}
                        width={20}
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "50%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        19-11-2009
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                        "marginTop": 60,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "20%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Rank:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        IMO:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Vessel:
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "80%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        EENG
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        9118513
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Mekong Spirit
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "borderBottomColor": "#78849E",
                      "borderBottomWidth": 0.5,
                      "marginBottom": 45,
                      "marginTop": 45,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "marginLeft": 60,
                      "marginRight": 112.5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "width": "40%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        04-08-2008
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "marginLeft": 45,
                          "marginRight": 45,
                          "marginTop": 22.5,
                          "width": "10%",
                        }
                      }
                    >
                      <<?xml version="1.0" encoding="utf-8"?>
<!-- Generator: Adobe Illustrator 24.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
<svg version="1.1" id="Layer_1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
	 viewBox="0 0 22.5 12" style="enable-background:new 0 0 22.5 12;" xml:space="preserve">
  <style type="text/css">
	.st0{}
</style>
  <polygon class="st0" points="16.5,0 15.1,1.4 18.7,5 0,5 0,7 18.7,7 15.1,10.6 16.5,12 22.5,6 "/>
</svg>

                        height={20}
                        width={20}
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "50%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        25-12-2008
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                        "marginTop": 60,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "20%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Rank:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        IMO:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Vessel:
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "80%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        EENG
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        9139646
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        MSC KRETA
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "borderBottomColor": "#78849E",
                      "borderBottomWidth": 0.5,
                      "marginBottom": 45,
                      "marginTop": 45,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTScrollView>
`;

exports[`SeaServiceRecordsScreen snapshot test should render SeaServiceRecordsScreen when loader is true  1`] = `
<RCTScrollView
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={true}
    />
  }
  style={
    Object {
      "flex": 1,
      "marginTop": 60,
    }
  }
  testID="scrollview"
>
  <RCTRefreshControl />
  <View>
    <View
      style={
        Array [
          Object {
            "alignContent": "center",
            "backgroundColor": "rgb(0, 122, 255)",
            "flexDirection": "row",
            "justifyContent": "space-around",
          },
          Object {
            "backgroundColor": "rgb(242, 242, 242)",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="first-option-button"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2A2E43",
                "fontFamily": "Roboto-Regular",
              },
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "opacity": 0.2,
                },
              ],
            ]
          }
        >
          Marlow
        </Text>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "borderBottomColor": "#2A2E43",
            "borderBottomWidth": 2,
            "opacity": 1,
          }
        }
        testID="second-option-button"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2A2E43",
                "fontFamily": "Roboto-Regular",
              },
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "paddingBottom": 5,
                },
                Object {},
                Object {
                  "fontWeight": "bold",
                },
              ],
            ]
          }
        >
          Non Marlow
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#78849E",
          "borderBottomWidth": 0.5,
          "marginTop": 60,
        }
      }
    />
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexGrow": 1,
        }
      }
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <View
            style={
              Object {
                "paddingTop": 22.5,
              }
            }
          >
            <View>
              <View>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "marginLeft": 60,
                      "marginRight": 112.5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "width": "40%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        30-05-2009
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "marginLeft": 45,
                          "marginRight": 45,
                          "marginTop": 22.5,
                          "width": "10%",
                        }
                      }
                    >
                      <<?xml version="1.0" encoding="utf-8"?>
<!-- Generator: Adobe Illustrator 24.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
<svg version="1.1" id="Layer_1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
	 viewBox="0 0 22.5 12" style="enable-background:new 0 0 22.5 12;" xml:space="preserve">
  <style type="text/css">
	.st0{}
</style>
  <polygon class="st0" points="16.5,0 15.1,1.4 18.7,5 0,5 0,7 18.7,7 15.1,10.6 16.5,12 22.5,6 "/>
</svg>

                        height={20}
                        width={20}
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "50%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        19-11-2009
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                        "marginTop": 60,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "20%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Rank:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        IMO:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Vessel:
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "80%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        EENG
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        9118513
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Mekong Spirit
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "borderBottomColor": "#78849E",
                      "borderBottomWidth": 0.5,
                      "marginBottom": 45,
                      "marginTop": 45,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
              <View>
                <View
                  style={
                    Object {
                      "flex": 1,
                      "marginLeft": 60,
                      "marginRight": 112.5,
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "width": "40%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        04-08-2008
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "marginLeft": 45,
                          "marginRight": 45,
                          "marginTop": 22.5,
                          "width": "10%",
                        }
                      }
                    >
                      <<?xml version="1.0" encoding="utf-8"?>
<!-- Generator: Adobe Illustrator 24.2.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
<svg version="1.1" id="Layer_1"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
	 viewBox="0 0 22.5 12" style="enable-background:new 0 0 22.5 12;" xml:space="preserve">
  <style type="text/css">
	.st0{}
</style>
  <polygon class="st0" points="16.5,0 15.1,1.4 18.7,5 0,5 0,7 18.7,7 15.1,10.6 16.5,12 22.5,6 "/>
</svg>

                        height={20}
                        width={20}
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "50%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 45,
                              "marginTop": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        25-12-2008
                      </Text>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "flex": 1,
                        "flexDirection": "row",
                        "marginTop": 60,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "20%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Rank:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        IMO:
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 20,
                              "marginBottom": 22.5,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        Vessel:
                      </Text>
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "flex-start",
                          "justifyContent": "flex-start",
                          "width": "80%",
                        }
                      }
                    >
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        EENG
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        9139646
                      </Text>
                      <Text
                        style={
                          Array [
                            Object {
                              "color": "#2A2E43",
                              "fontFamily": "Roboto-Regular",
                            },
                            Object {
                              "color": "rgb(28, 28, 30)",
                              "fontSize": 24,
                              "fontWeight": "bold",
                              "marginBottom": 15,
                              "textAlign": "left",
                            },
                          ]
                        }
                      >
                        MSC KRETA
                      </Text>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "borderBottomColor": "#78849E",
                      "borderBottomWidth": 0.5,
                      "marginBottom": 45,
                      "marginTop": 45,
                    }
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#2A2E43",
                          "fontFamily": "Roboto-Regular",
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTScrollView>
`;
